--- a/giphy.css
+++ b/giphy.css
@@ -1,3 +1,9 @@
+h1 {
+    text-align: center;
+    color: red;
+
+}
+
 button,
 div,
 form,
@@ -17,6 +23,8 @@ button:hover {
     background-color: lightgreen;
 }
 
+
+
 input {
     background-color: lightblue;
 }
@@ -27,4 +35,8 @@ input {
     padding: 7px;
     border-radius: 12px;
     border: 2px solid lightblue;
+}
+
+#add-show:hover {
+    background-color: lightgreen;
 }
