--- a/giphy.css
+++ b/giphy.css
@@ -1,3 +1,9 @@
+.container {
+    text-align: center;
+    margin: auto;
+    border: solid 4px grey;
+}
+
 h1 {
     text-align: center;
     color: red;
@@ -5,7 +11,7 @@ h1 {
 }
 
 h3 {
-    text-align: left;
+
     color: red;
 
 }
